# polars-rows-iter

./: Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml  rust.yml
polars-row-iter/: Cargo.toml
polars-rows-iter/: Cargo.toml
polars-rows-iter-derive/: Cargo.toml  README.md
polars-rows-iter-derive/src/: from_dataframe_row_derive.rs  impl_iter_from_column_for_type.rs  lib.rs
polars-rows-iter/benches/: benchmark.rs
polars-rows-iter/examples/: dynamic_column_names.rs  static_column_names.rs
polars-rows-iter/src/: dataframe_rows_iter_ext.rs  from_dataframe_row.rs  lib.rs  shared_test_helpers.rs
polars-rows-iter/src/iter_from_column/: iter_from_column.rs  iter_from_column_binary.rs  iter_from_column_i32.rs  iter_from_column_i64.rs  iter_from_column_primitives.rs  iter_from_column_series.rs  iter_from_column_str.rs  iter_from_column_string.rs  iter_from_column_trait.rs  mod.rs  value_functions.rs
polars-rows-iter/src/iter_from_column/iter_from_column_chrono/: datetime.rs  mod.rs  naivedatetime.rs
polars-rows-iter/tests/: impl.rs  sandbox.rs
