[workspace]
resolver = "2"
members = ["polars-rows-iter", "polars-rows-iter-derive"]

[workspace.package]
version = "0.6.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/letkemann/polars-rows-iter"
description = "Library for easy and convenient row iteration of polars dataframes"
keywords = ["polars", "dataframe", "rows", "iterator"]

[workspace.dependencies]
polars = "0.45.0"
chrono = "0.4.38"
criterion = { git = "https://github.com/bheisler/criterion.rs.git", rev = "260e2f1" }
rand = "0.8.5"
itertools = "0.13.0"
proc-macro2 = "1.0.92"
quote = "1.0.37"
syn = "2.0.90"
deluxe = "0.5.0"
