[workspace]
resolver = "2"
members = ["polars-rows-iter", "polars-rows-iter-derive"]

[workspace.package]
version = "0.9.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/letkemann/polars-rows-iter"
description = "Library for easy and convenient row iteration of polars dataframes"
keywords = ["polars", "dataframe", "rows", "iterator"]

[workspace.dependencies]
polars = "0.46.0"
chrono = "0.4.39"
criterion = { git = "https://github.com/bheisler/criterion.rs.git", rev = "260e2f1" }
rand = "0.9.0"
itertools = "0.14.0"
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = "2.0.96"
deluxe = "0.5.0"
