[package]
name = "polars-rows-iter-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Sub crate for polars-rows-iter"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.89"
quote = "1.0.37"
syn = "2.0.87"
deluxe = "0.5.0"
