[package]
name = "polars-rows-iter-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Sub crate for polars-rows-iter"

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
deluxe.workspace = true
itertools.workspace = true
