[package]
name = "polars-rows-iter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Library for easy and convenient row iteration of polars dataframes"
keywords = ["polars", "row", "rows", "iter", "iterator"]

[dependencies]
polars.workspace = true
polars-rows-iter-derive = { path = "../polars-rows-iter-derive" }

[features]
default = []
dtype-categorical = ["polars/dtype-categorical"]
