[package]
name = "polars-rows-iter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Library for easy and convenient row iteration of polars dataframes"
keywords = ["polars", "row", "rows", "iter", "iterator"]

[dependencies]
polars.workspace = true
polars-rows-iter-derive = { path = "../polars-rows-iter-derive" }

[dev-dependencies]
polars = { workspace = true, features = ["dtype-full"] }
criterion = "0.5.1"
rand = "0.8.5"
chrono = "0.4.38"
itertools = "0.13.0"

[features]
default = []
dtype-categorical = ["polars/dtype-categorical"]

[[bench]]
name = "benchmark"
harness = false
