[package]
name = "polars-rows-iter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true

[dependencies]
polars.workspace = true
chrono = { workspace = true, optional = true }
polars-rows-iter-derive.workspace = true

[dev-dependencies]
polars = { workspace = true, features = ["dtype-full"] }
criterion.workspace = true
rand.workspace = true
itertools.workspace = true

[features]
default = []
dtype-categorical = ["polars/dtype-categorical"]
dtype-time = ["polars/dtype-time"]
chrono = ["dep:chrono"]

[[bench]]
name = "benchmark"
harness = false
